crates/toml/tests/snapshots/invalid/datetime/no-year-month-sep.stderr
TOML parse error at line 1, column 13
  |
1 | foo = 199709-09
  |             ^
expected newline, `#`
